--- a/css/blogpost.css
+++ b/css/blogpost.css
@@ -5,7 +5,6 @@
   justify-items: center;
   row-gap: 20px;
   align-items: center; 
-  min-height: 100vh; 
 }
 
 .blog-container {
